# fastapi-candidate-management

./: .env_copy  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.postman_collection.json  docker-compose.yml  pyproject.toml
fastapi_assignment/: celery_config.py  config.py  main.py  tasks.py
fastapi_assignment/middleware/: auth_middleware.py  sentry_logging_middleware.py
fastapi_assignment/models/: candidate.py  user.py
fastapi_assignment/routers/: candidate.py  health.py  report.py  user.py
fastapi_assignment/utils/: dependencies.py  email_utils.py  jwt_utils.py
tests/: conftest.py  test_candidate_service.py  test_celery_integration.py  test_user_service.py
